# MetronomeAmplifiedWindows

./: .gitignore  MetronomeAmplifiedWindows.sln
MetronomeAmplifiedWindows/: App.cpp  App.h  CMakeLists.txt  MetronomeAmplifiedWindows.vcxproj  MetronomeAmplifiedWindows.vcxproj.filters  MetronomeAmplifiedWindowsMain.cpp  MetronomeAmplifiedWindowsMain.h  MetronomeAmplifiedWindows_TemporaryKey.pfx  Package.appxmanifest  Traits.h  pch.h  readme.txt
MetronomeAmplifiedWindows/Assets/Definitions/: Orkney.fnt
MetronomeAmplifiedWindows/Common/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.cpp  DirectXHelper.h  Font.cpp  Font.h  StepTimer.h  WICTextureLoader.cpp  WICTextureLoader.h
MetronomeAmplifiedWindows/Content/: AlphaTextureVertexShader.hlsl  FontVertexShader.hlsl  MainSceneRenderer.cpp  MainSceneRenderer.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderCache.cpp  ShaderCache.h  ShaderStructures.h  TextureCache.cpp  TextureCache.h  Traits.h  VertexBufferCache.cpp  VertexBufferCache.h
MetronomeAmplifiedWindows/Content/Components/: BaseShader.cpp  BaseShader.h  BaseTexture.cpp  BaseTexture.h  BaseVertexBuffer.cpp  BaseVertexBuffer.h
MetronomeAmplifiedWindows/Content/Components/Shaders/: AlphaTextureShader.cpp  AlphaTextureShader.h  AlphaTextureTransformShader.cpp  AlphaTextureTransformShader.h  FontShader.cpp  FontShader.h  FontTransformShader.cpp  FontTransformShader.h
MetronomeAmplifiedWindows/Content/Components/Textures/: FontTexture.cpp  FontTexture.h  IconsTexture.cpp  IconsTexture.h  OverlayTexture.cpp  OverlayTexture.h  SampleImageTexture.cpp  SampleImageTexture.h  WoodTexture.cpp  WoodTexture.h
MetronomeAmplifiedWindows/Content/Components/VertexBuffers/: BackgroundVertexBuffer.cpp  BackgroundVertexBuffer.h  IconLabelsVertexBuffer.cpp  IconLabelsVertexBuffer.h  MainScreenIconLabelsVertexBuffer.cpp  MainScreenIconLabelsVertexBuffer.h  MainScreenIconsVertexBuffer.cpp  MainScreenIconsVertexBuffer.h  MainScreenTranslucentOverlayVertexBuffer.cpp  MainScreenTranslucentOverlayVertexBuffer.h  SettingsDetailsIconsVertexBuffer.cpp  SettingsDetailsIconsVertexBuffer.h  SettingsDetailsTranslucentOverlayVertexBuffer.cpp  SettingsDetailsTranslucentOverlayVertexBuffer.h  SettingsHubLabelsVertexBuffer.cpp  SettingsHubLabelsVertexBuffer.h  SettingsNavigatingImagesVertexBuffer.cpp  SettingsNavigatingImagesVertexBuffer.h  SettingsNavigatingTextsVertexBuffer.cpp  SettingsNavigatingTextsVertexBuffer.h
MetronomeAmplifiedWindows/Content/Resources/: Shaders.cpp  Shaders.h  Textures.cpp  Textures.h  VertexBuffers.cpp  VertexBuffers.h
MetronomeAmplifiedWindows/Content/Scenes/: MainSceneRenderer.cpp  MainSceneRenderer.h  SettingsHubScene.cpp  SettingsHubScene.h  SettingsNavigationScene.cpp  SettingsNavigationScene.h
MetronomeAmplifiedWindows/Content/ShaderSource/: AlphaTextureTransformVertexShader.hlsl  FontTransformPixelShader.hlsl  FontTransformVertexShader.hlsl
MetronomeAmplifiedWindows/Content/Shaders/: AlphaTexturePixelShader.hlsl  FontPixelShader.hlsl
